{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 664,
  "lineage": "8257f3f7-134c-52bd-2d3d-40bab9bb24d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e6a5f14611414025",
            "public_dns": "ec2-3-20-84-216.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.84.216",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hv-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0275dd81d471816c9",
            "owner_id": "150600325810",
            "tags": {
              "Name": "hv"
            },
            "vpc_id": "vpc-0722764a5709822a6"
          },
          "dependencies": [
            "aws_vpc.hv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e6a5f14611414025",
            "id": "nat-0378e5622e86d7923",
            "network_interface_id": "eni-0df4ef70a6795e743",
            "private_ip": "10.1.1.56",
            "public_ip": "3.20.84.216",
            "subnet_id": "subnet-02a4f7daf7fd84754"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.hv-gw",
            "aws_subnet.hv-public-1",
            "aws_vpc.hv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "mi-aiops",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09ac2e623322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ac2e62",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": "pcx-08993ffc73912d61c"
          },
          "dependencies": [
            "aws_vpc.hv",
            "aws_vpc_peering_connection.vpc-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hv-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0352eb5b3fcdd59b6",
            "owner_id": "150600325810",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0378e5622e86d7923",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "172.31.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-08993ffc73912d61c"
              }
            ],
            "tags": {
              "Name": "hv-private-1"
            },
            "vpc_id": "vpc-0722764a5709822a6"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.hv-gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.hv-public-1",
            "aws_vpc.hv",
            "aws_vpc_peering_connection.vpc-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hv-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0406954046f44aace",
            "owner_id": "150600325810",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0275dd81d471816c9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "172.31.0.0/16",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-08993ffc73912d61c"
              }
            ],
            "tags": {
              "Name": "hv-public-1"
            },
            "vpc_id": "vpc-0722764a5709822a6"
          },
          "dependencies": [
            "aws_internet_gateway.hv-gw",
            "aws_vpc.hv",
            "aws_vpc_peering_connection.vpc-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hv-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09399a8c8ad05ab1f",
            "route_table_id": "rtb-0352eb5b3fcdd59b6",
            "subnet_id": "subnet-0a13240d80516d5f1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.hv-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.hv-private-1",
            "aws_subnet.hv-private-1",
            "aws_subnet.hv-public-1",
            "aws_vpc.hv",
            "aws_vpc_peering_connection.vpc-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hv-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06551daa3b4653786",
            "route_table_id": "rtb-0406954046f44aace",
            "subnet_id": "subnet-02a4f7daf7fd84754"
          },
          "dependencies": [
            "aws_internet_gateway.hv-gw",
            "aws_route_table.hv-public",
            "aws_subnet.hv-public-1",
            "aws_vpc.hv",
            "aws_vpc_peering_connection.vpc-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hv-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00149c482e636011f",
            "route_table_id": "rtb-0406954046f44aace",
            "subnet_id": "subnet-0ced167352975fb04"
          },
          "dependencies": [
            "aws_internet_gateway.hv-gw",
            "aws_route_table.hv-public",
            "aws_subnet.hv-public-2",
            "aws_vpc.hv",
            "aws_vpc_peering_connection.vpc-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hv-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b527a0d2298cf74",
            "route_table_id": "rtb-0406954046f44aace",
            "subnet_id": "subnet-0016170871a78715f"
          },
          "dependencies": [
            "aws_internet_gateway.hv-gw",
            "aws_route_table.hv-public",
            "aws_subnet.hv-public-3",
            "aws_vpc.hv",
            "aws_vpc_peering_connection.vpc-peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aiops-test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:150600325810:security-group/sg-09634ba70465d0243",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09634ba70465d0243",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aiops test",
            "name_prefix": null,
            "owner_id": "150600325810",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aiops test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0722764a5709822a6"
          },
          "dependencies": [
            "aws_vpc.hv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hv-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:150600325810:subnet/subnet-0a13240d80516d5f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.4.0/24",
            "id": "subnet-0a13240d80516d5f1",
            "map_public_ip_on_launch": false,
            "owner_id": "150600325810",
            "tags": {
              "Name": "hv-private-1"
            },
            "vpc_id": "vpc-0722764a5709822a6"
          },
          "dependencies": [
            "aws_vpc.hv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hv-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:150600325810:subnet/subnet-066edf7d51ca4e257",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.5.0/24",
            "id": "subnet-066edf7d51ca4e257",
            "map_public_ip_on_launch": false,
            "owner_id": "150600325810",
            "tags": {
              "Name": "hv-private-2"
            },
            "vpc_id": "vpc-0722764a5709822a6"
          },
          "dependencies": [
            "aws_vpc.hv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hv-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:150600325810:subnet/subnet-0f34fdb874687bbfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.6.0/24",
            "id": "subnet-0f34fdb874687bbfd",
            "map_public_ip_on_launch": false,
            "owner_id": "150600325810",
            "tags": {
              "Name": "hv-private-3"
            },
            "vpc_id": "vpc-0722764a5709822a6"
          },
          "dependencies": [
            "aws_vpc.hv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hv-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:150600325810:subnet/subnet-02a4f7daf7fd84754",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-02a4f7daf7fd84754",
            "map_public_ip_on_launch": true,
            "owner_id": "150600325810",
            "tags": {
              "Name": "hv-public-1"
            },
            "vpc_id": "vpc-0722764a5709822a6"
          },
          "dependencies": [
            "aws_vpc.hv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hv-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:150600325810:subnet/subnet-0ced167352975fb04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0ced167352975fb04",
            "map_public_ip_on_launch": true,
            "owner_id": "150600325810",
            "tags": {
              "Name": "hv-public-2"
            },
            "vpc_id": "vpc-0722764a5709822a6"
          },
          "dependencies": [
            "aws_vpc.hv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hv-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:150600325810:subnet/subnet-0016170871a78715f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.1.3.0/24",
            "id": "subnet-0016170871a78715f",
            "map_public_ip_on_launch": true,
            "owner_id": "150600325810",
            "tags": {
              "Name": "hv-public-3"
            },
            "vpc_id": "vpc-0722764a5709822a6"
          },
          "dependencies": [
            "aws_vpc.hv"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:150600325810:vpc/vpc-0722764a5709822a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a52317695de3002c",
            "default_route_table_id": "rtb-0710be7e7ad3c4250",
            "default_security_group_id": "sg-06e5bf8e6501a0257",
            "dhcp_options_id": "dopt-e5e8378e",
            "enable_classiclink": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0722764a5709822a6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0710be7e7ad3c4250",
            "owner_id": "150600325810",
            "tags": {
              "Name": "hv"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc-peer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-08993ffc73912d61c",
            "peer_owner_id": "150600325810",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-9743b9fc",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between openshift and mi-aiops"
            },
            "vpc_id": "vpc-0722764a5709822a6"
          },
          "dependencies": [
            "aws_vpc.hv"
          ]
        }
      ]
    }
  ]
}